--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,34 @@ h1 {
   border-top-left-radius: 0.5em;
   border-top-right-radius: 0.5em;
 }
+
+.controls {
+  background-color: #333;
+  color: #fff;
+  width: 50%;
+  border-bottom-left-radius: 0.5em;
+  border-bottom-right-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+}
+
+.controls .btn {
+  border: 0;
+  background: transparent;
+  /*This makes the control "cosnsole' transparent*/
+  ;
+  cursor: pointer;
+}
+
+@media(max-width: 400px) {
+
+  .screen,
+  .controls {
+    width: 70%;
+  }
+}
+
+/*This makes it a responsive screen, although, there is some tweaking needed.
+Known as a media query */
